@@ -43419,6 +43419,12 @@ command line.  The file and arguments are hex-encoded strings.  If
 (e.g.@: the last program run).  The program is created in the stopped
 state.
 
+If @value{GDBN} sent the @samp{single-inf-arg+} feature in the
+@samp{qSupported} packet, and the stub replied with
+@samp{single-inf-arg+}, then there will only be a single
+@var{argument} string, which includes all inferior arguments,
+separated with whitespace.
+
 @c FIXME:  What about non-stop mode?
 
 This packet is only available in extended mode (@pxref{extended mode}).
@@ -44771,6 +44777,13 @@ didn't support @samp{E.@var{errtext}}, and older versions of
 
 New packets should be written to support @samp{E.@var{errtext}}
 regardless of this feature being true or not.
+
+@item single-inf-arg
+This feature indicates that @value{GDBN} would like to send the
+inferior arguments as a single string within the @samp{vRun} packet.
+@value{GDBN} will not send the arguments as a single string unless the
+stub also reports that is supports this behaviour by including
+@samp{single-inf-arg+} in its @samp{qSupported} reply.
 @end table
 
 Stubs should ignore any unknown values for
@@ -45064,9 +45077,15 @@ These are the currently defined stub features and their properties:
 @tab @samp{-}
 @tab No
 
+
 @item @samp{error-message}
 @tab No
 @tab @samp{+}
+@tab No
+
+@item @samp{single-inf-arg}
+@tab No
+@tab @samp{-}
 @tab No
 
 @end multitable
@@ -45315,6 +45334,12 @@ The remote stub supports replying with an error in a
 send this feature back to @value{GDBN} in the @samp{qSupported} reply,
 @value{GDBN} will always support @samp{E.@var{errtext}} format replies
 if it sent the @samp{error-message} feature.
+
+@item single-inf-arg
+The remote stub would like to receive the inferior arguments as a
+single string within the @samp{vRun} packet.  The stub should only
+send this feature if @value{GDBN} sent @samp{single-inf-arg+} in the
+@samp{qSupported} packet.
 @end table
 
 @item qSymbol::
