@@ -72,31 +72,48 @@ proc args_test { name arglist {re_list {}} } {
     }
 }
 
-# Test that the --args are processed correctly.
+# Run all the tests.
+proc run_all_tests {} {
+    # Test that the --args are processed correctly.
 
-args_test basic {{1} {3}}
+    args_test basic {{1} {3}}
 
-# Test that the --args are processed correctly even if one of them is
-# empty.
+    # Test that the --args are processed correctly even if one of them is
+    # empty.
 
-args_test "one empty" {{1} {} {3}}
+    args_test "one empty" {{1} {} {3}}
 
-# Try with 2 empty args.
+    # Try with 2 empty args.
 
-args_test "two empty" {{1} {} {} 3}
+    args_test "two empty" {{1} {} {} 3}
 
-# Try with arguments containing literal single quotes.
+    # Try with arguments containing literal single quotes.
 
-args_test "one empty with single quotes" {{1} {''} {3}}
+    args_test "one empty with single quotes" {{1} {''} {3}}
 
-args_test "two empty with single quotes" {{1} {''} {''} {3}}
+    args_test "two empty with single quotes" {{1} {''} {''} {3}}
 
-# Try with arguments containing literal newlines.
+    # Try with arguments containing literal newlines.
 
-args_test "one newline" {{1} "\n" {3}} {1 \\\\n 3}
+    args_test "one newline" {{1} "\n" {3}} {1 \\\\n 3}
 
-args_test "two newlines" {{1} "\n" "\n" {3}} {1 \\\\n \\\\n 3}
+    args_test "two newlines" {{1} "\n" "\n" {3}} {1 \\\\n \\\\n 3}
 
-args_test "lone single quote" {{1} \' {3}}
+    args_test "lone single quote" {{1} \' {3}}
 
-args_test "lone double quote" {{1} \" {3}} {1 \\\\\" 3}
+    args_test "lone double quote" {{1} \" {3}} {1 \\\\\" 3}
+}
+
+run_all_tests
+
+# For extended-remote targets, disable the packet which passes
+# inferior arguments as a single string.  This changes how the vRun
+# (extended-remote only) packet works.
+if {[target_info gdb_protocol] == "extended-remote"} {
+    with_test_prefix "single-inferior-arg disabled" {
+	save_vars { GDBFLAGS } {
+	    append GDBFLAGS " -ex \"set remote single-inferior-argument-feature-packet off\""
+	    run_all_tests
+	}
+    }
+}
